refactor: removed some book entry fields
