# src/app/Http/Controllers/BookController.php
@@ -30,11 +30,8 @@ use Exception;
  *     @OA\Property(property="cover", type="string", example="url_to_cover_image"),
  *     @OA\Property(property="description", type="string", example="A novel about the American dream."),
  *     @OA\Property(property="pageCount", type="string", example="200"),
- *     @OA\Property(property="language", type="string", example="English"),
- *     @OA\Property(property="publisher", type="string", example="Scribner"),
  *     @OA\Property(property="publishedDate", type="string", example="1925-04-10"),
  *     @OA\Property(property="averageRating", type="string", example="4.5"),
- *     @OA\Property(property="ratingsCount", type="string", example="10000")
  * )
  */
 class BookController extends Controller
@@ -68,11 +65,8 @@ class BookController extends Controller
      *             @OA\Property(property="cover", type="string", example="url_to_cover_image"),
      *             @OA\Property(property="description", type="string", example="A novel about the American dream."),
      *             @OA\Property(property="pageCount", type="string", example="200"),
-     *             @OA\Property(property="language", type="string", example="English"),
-     *             @OA\Property(property="publisher", type="string", example="Scribner"),
      *             @OA\Property(property="publishedDate", type="string", example="1925-04-10"),
      *             @OA\Property(property="averageRating", type="string", example="4.5"),
-     *             @OA\Property(property="ratingsCount", type="string", example="10000")
      *         )
      *     ),
      *     @OA\Response(
@@ -109,11 +103,8 @@ class BookController extends Controller
      *             @OA\Property(property="cover", type="string", example="url_to_cover_image"),
      *             @OA\Property(property="description", type="string", example="A novel about teenage angst."),
      *             @OA\Property(property="pageCount", type="string", example="277"),
-     *             @OA\Property(property="language", type="string", example="English"),
-     *             @OA\Property(property="publisher", type="string", example="Little, Brown and Company"),
      *             @OA\Property(property="publishedDate", type="string", example="1951-07-16"),
      *             @OA\Property(property="averageRating", type="string", example="4.2"),
-     *             @OA\Property(property="ratingsCount", type="string", example="5000")
      *         )
      *     ),
      *     @OA\Response(
@@ -140,11 +131,8 @@ class BookController extends Controller
                 'cover' => 'nullable|string',
                 'description' => 'nullable|string',
                 'pageCount' => 'nullable|string',
-                'language' => 'nullable|string',
-                'publisher' => 'nullable|string',
                 'publishedDate' => 'nullable|string',
                 'averageRating' => 'nullable|string',
-                'ratingsCount' => 'nullable|string',
                 ]
             );
 
@@ -179,11 +167,8 @@ class BookController extends Controller
      *             @OA\Property(property="cover", type="string", example="url_to_cover_image"),
      *             @OA\Property(property="description", type="string", example="A novel about the American dream."),
      *             @OA\Property(property="pageCount", type="string", example="200"),
-     *             @OA\Property(property="language", type="string", example="English"),
-     *             @OA\Property(property="publisher", type="string", example="Scribner"),
      *             @OA\Property(property="publishedDate", type="string", example="1925-04-10"),
      *             @OA\Property(property="averageRating", type="string", example="4.5"),
-     *             @OA\Property(property="ratingsCount", type="string", example="10000")
      *         )
      *     ),
      *     @OA\Response(
@@ -212,11 +197,8 @@ class BookController extends Controller
                 'cover' => 'nullable|string',
                 'description' => 'nullable|string',
                 'pageCount' => 'nullable|string',
-                'language' => 'nullable|string',
-                'publisher' => 'nullable|string',
                 'publishedDate' => 'nullable|string',
                 'averageRating' => 'nullable|string',
-                'ratingsCount' => 'nullable|string',
                 ]
             );
 
